# old_rr_code

./: dajie-java-formatter.xml  eclipse-java-cleanup.xml
cwf/data/: tag_index
cwf/etc/: activemotionserver.ipv4.conf  activemotionserver.sock.conf  search.ipv4.conf  search.sock.conf  socialgraphd.ipv4.conf  socialgraphd.sock.conf  tipsserver.ipv4.conf  tipsserver.sock.conf
cwf/libs/: libGlacier2.so.33  libIceBox.so.33  libIceUtil.so.33  libboost_regex-gcc41-mt-1_38.so.1.38.0  libboost_thread-gcc41-mt-1_38.so.1.38.0  libbreakpad.so.0.0.0  libbz2.so.1  libctemplate.so.0  libmemcached.so.5  libmysqlclient.so.15  libtcmalloc_and_profiler.so.0  libzookeeper_mt.so.2
cwf/tpl/: appresult.tpl  clubresult.tpl  commonfriends.tpl  ffucr.tpl  ffw.tpl  ffwr.tpl  fof18.tpl  noresult.tpl  noresultexternal.tpl  page.tpl  pagehome.tpl  pageresult.tpl  rblog.tpl  rcd_blog.tpl  rcd_video.tpl  rcdapp.tpl  rcddesk.tpl  rcdsite.tpl  rcdsm.tpl  rvideo.tpl  sendmsg.tpl  share_ffucr.tpl  userinfo.tpl  vip.tpl  writecomment.tpl
install/: install_jdk.sh  new_redis_server.sh  redis_6600.conf  redis_6601.conf  redis_6602.conf  redis_6603.conf  redis_start.sh
java_workplace/ds/: README.txt  decorate_gzip.txt
java_workplace/gossip-service-trunk/: pom.xml
java_workplace/oce-adapter/: .project  pom.xml
java_workplace/oce-tools/STLTest/: CMakeLists.txt
java_workplace/oce-tools/STLTest/src/: mainIce.cpp  mainMapStr.cpp  mainMapStrEx.cpp
java_workplace/renren-web-deployer/: ajaxproxy.htm  bash_profile  deploy_from_disk  deploy_from_radis  deploy_one_stop_batch  deploy_xnimg  generate_and_sync_all  newmachine  newweb  showlogweb  startweb  stopweb  sucess_monitor  sync_nginx_confs  xcerc
java_workplace/sns-commons/: pom.xml
java_workplace/tripod_cache_client/: .project  pom.xml
java_workplace/tripod_core/: .project  pom.xml
java_workplace/xiaonei-sns-core-trunk/: pom.xml
java_workplace/帮助法国儿子/: .project
main_project/: SConstruct
main_project/Account/: .cproject  .project  (+1 more)
main_project/EvaCollect/: CMakeLists.txt
main_project/EvaCollect/java/src/xce/eva/collect/: EvaCollector.java  LogCount.java  LogHolder.java  LogTail.java  OutputTimer.java  Stat.java  StatAvgByTime.java  StatObject.java  StatTopPart.java
main_project/EvaCollect/src/: CollectThread.cpp  CollectThread.h
main_project/EvaCollectIndep/: CMakeLists.txt
main_project/EvaCollectIndep/slice/: ObjectCache.ice  ReplicaCluster.ice  SubjectObserver.ice  Util.ice
main_project/EvaCollectIndep/src/: CollectThread.cpp  CollectThread.h  IpAddr.hpp  XceLoggerAdapter.cpp  XceLoggerAdapter.h
main_project/WordSegmentation/: Dict.cpp  Dict.h  GenerateChunk.cpp  GenerateChunk.h  Makefile  Makefile.am  Makefile.in  Opi_MMsegTest  Opi_MMsegTest.cpp  WordSegmentation.cpp  WordSegmentation.h  config.h  config.h.in  config.status  configure  configure.in
main_project/WordSegmentation/.deps/: Dict.Po  FilterRules.Po  GenerateChunk.Po  Opi_MMsegTest.Po  WordSegmentation.Po
main_project/WordSegmentation/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
main_project/WordSegmentation/data/: char.stat.txt
main_project/XCS/cpp/xcs-core/: CMakeLists.txt  CTestConfig.cmake  README  autorun.sh
main_project/XCS/cpp/xcs-core/include/: properties_configuration.h  xcs_service_factory.h
main_project/XCS/cpp/xcs-core/src/: properties_configuration.cc  service_event_listener.cc  service_registry.cc  service_registry.h  service_registry_accessor.cc  service_registry_accessor.h  zk_acl_provider.cc  zk_client.cc  zk_client.h  zk_event_listener.h
main_project/XCS/cpp/xcs-core/tests/: CMakeLists.txt  service_registry_accessor_demo.cc  service_registry_accessor_demo.conf  service_registry_demo.cc  service_registry_demo.conf  xcs_service_factory_demo.cc  zk_client_demo.cc  zk_client_demo.conf
main_project/XSB/template/cpp/: CMakeLists.txt  hello_world.cc  hello_world.h
main_project/XSB/template/cpp/test/: CMakeLists.txt  hello_world_u.cc
main_project/app/Bulletin/fcgi/: CMakeLists.txt
main_project/app/Bulletin/fcgi/main/: main_click.cpp  main_close.cpp  main_show.cpp
main_project/app/ILikeIt/fcgi/: CMakeLists.txt
main_project/app/ILikeIt/fcgi/main/: FCGIUtil.h  ILikeFCGIUtil.h  addlike.cpp  removelike.cpp  showlike.cpp  showlikedetail.cpp
main_project/app/Log4cplusLoggingServer/djloggingserver/cmake_build/: CMakeLists.txt
main_project/app/Quest/fcgi/: CMakeLists.txt
main_project/app/Quest/fcgi/main/: clickTip.cpp  newFlow.cpp  showTip.cpp
main_project/logging/XceLoggerIndep/: CMakeLists.txt
main_project/logging/XceLoggerIndep/src/: ServiceSimpI.cpp  ServiceSimpI.h  Singleton.h  XceLogger.cpp  XceLogger.h  XceLoggerI.cpp  XceLoggerI.h
main_project/tripod/cpp/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  bootstrap  configure  configure.in
main_project/tripod/cpp/Debug/: makefile  sources.mk
main_project/tripod/cpp/Debug/src/client/: subdir.mk
main_project/tripod/cpp/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
main_project/tripod/cpp/include/: Makefile.am  Makefile.in  TripodSchema.pb.h  adapter.h  cluster.h  communicator.h  data.h  key.h  logger.h  node.h  observer.h  subject.h
main_project/tripod/cpp/src/client/: Makefile.am  Makefile.in  TripodSchema.pb.cc  adapter.cc  cluster.cc  communicator.cc  node.cc  subject.cc
main_project/user/UserBase/hotback/3gclient/UserClient3G/sample/: CMakeLists.txt
main_project/user/UserBase/hotback/3gclient/UserClient3G/sample/src/: main.cpp
main_project/xoa2-serverlib/serverlib/: CMakeLists.txt  README
main_project/xoa2-serverlib/serverlib/include/: RenrenService.h  renren_constants.h  renren_types.h  service_arch.h  service_base_impl.h  service_base_statistics.h  service_config.h  xoa_processor.h
main_project/xoa2-serverlib/serverlib/src/: logging.cc  logging.h  service_base_impl.cc  service_base_statistics.cc  service_config.cc  service_registry.cc  service_registry.h  xoa_processor.h
main_project/xoa2-serverlib/serverlib/thrift-idl/: renren.thrift  start_xoa2.cmake
topcc/: runonce.sh
(+17009 files in other folders)
