cmake_minimum_required(VERSION 2.6)

PROJECT(FCGI_ILIKE)

SET(OCE_BASE ${CMAKE_CURRENT_SOURCE_DIR}/../../../)
SET(ICE_HOME /opt/Ice-3.3/)
SET(FCGI_BASE ${CMAKE_CURRENT_SOURCE_DIR}/../../../../software/fcgi)

SET(SRC_ADD main/addlike.cpp)
SET(SRC_REMOVE main/removelike.cpp)
SET(SRC_SHOW main/showlike.cpp)
SET(SRC_DETAIL main/showlikedetail.cpp)

SET(INCLUDE_PATH /usr/local/xce/include /usr/local/xce-dev/include/
	/usr/local/xce/include/boost-1_38/ include generated ${OCE_BASE}
${OCE_BASE}/UtilCxx/src ${OCE_BASE}/IceExt/src ${OCE_BASE}/DbCxxPool/src
${OCE_BASE}/release-newarch/tmp/UtilSlice/cpp
${OCE_BASE}/release-newarch/tmp/OceSlice/cpp  /usr/include/mysql
${OCE_BASE}/BatchUpdater/src ${OCE_BASE}/XceStorm/src
${OCE_BASE}/OceCxxAdapter/src usr/local/include ${FCGI_BASE}/include
${ICE_HOME}/include main/ /usr/local/xce/include/boost-1_38/boost)

SET(LIB_PATH /usr/local/xce/lib64 ${OCE_BASE}/release-newarch ${FCGI_BASE}/lib ${ICE_HOME}/lib)

SET(CMAKE_CXX_FLAGS "-g -O2 -DNEWARCH")
#SET(CMAKE_CXX_FLAGS "-O2 -fPIC")

#SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(${INCLUDE_PATH})

LINK_DIRECTORIES(${LIB_PATH})

LINK_LIBRARIES(Ice IceUtil IceXML IceBox IceStorm IceGrid pthread mysqlpp
crypto ssl rt log4cplus)
#LINK_LIBRARIES(libOceSliceWEvent.a)
#LINK_LIBRARIES(libOceSliceUserBase.a)
#LINK_LIBRARIES(libOceSliceILikeIt.a)
LINK_LIBRARIES(libOceCxxAdapterActiveTrackAdapter.a)
LINK_LIBRARIES(libOceCxxAdapterTicketAdapter.a)
LINK_LIBRARIES(libOceCxxAdapterILikeItLogicAdapter.a)
LINK_LIBRARIES(libOceCxxAdapterILikeItCacheAdapter.a)
LINK_LIBRARIES(libOceCxxAdapterIdCacheReaderAdapter.a)
LINK_LIBRARIES(libReplicaCluster.a libfcgi.a libboost_regex.a
	libboost_system-gcc41-mt.a)
LINK_LIBRARIES(IceExt DbCxxPool OceSliceXceStorm UtilCxx UtilSlice OceSlice)

ADD_EXECUTABLE(addlike ${SRC_ADD})
ADD_EXECUTABLE(removelike ${SRC_REMOVE})
ADD_EXECUTABLE(showlike ${SRC_SHOW})
ADD_EXECUTABLE(showdetail ${SRC_DETAIL})
